# osmscout-sailfish

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  COPYING  README.md  TODO.md  cz.karry.osmscout.OSMScout.service  harbour-osmscout-jolla1-open-url.desktop  harbour-osmscout.desktop  osmscout-sailfish.desktop  osmscout-sailfish.pro  res.qrc
.github/workflows/: build_and_test_on_ubuntu_20_04.yml  build_and_test_on_ubuntu_22_04.yml  build_and_test_on_ubuntu_24_04.yml
.tx/: config
CMakeMod/: Config.h.cmake  FindSailfishApp.cmake  Version.h.cmake  features.cmake
dependencies/: CMakeLists.txt
graphics/: convertIcon.sh  icon-m-favorite-halfselected.xcf
qml/: AboutDialog.qml  SearchDialog.qml  desktop.qml  l10n.qml  main.qml  qmldir
qml/custom/: AvailableMapsView.qml  CollectionComboBox.qml  CollectionEditDialog.qml  CollectionEntryDialog.qml  CollectionSelector.qml  DialogActionButton.qml  Global.qml  GpsFixWarning.qml  LaneTurnIcon.qml  LaneTurns.qml  LineEdit.qml  Link.qml  LocationSearch.qml  LocationSelector.qml  MapBase.qml  MapButton.qml  MapComponent.qml  MapDialog.qml  MapRenderingIndicator.qml  OSMCopyright.qml  OpeningHoursRow.qml  POIIcon.qml  PhoneRow.qml  RouteElevationChart.qml  RouteProfileMenuItem.qml  RouteStepIcon.qml  RoutingStep.qml  ScaleIndicator.qml  SpeedIndicator.qml  SymbolIcon.qml  SymbolSelector.qml  TrackTypeComboBox.qml  TrackTypeIcon.qml  TrackTypeMenuItem.qml  TrackTypes.qml  Utils.js  WebsiteRow.qml
qml/pages/: About.qml  ChartTest.qml  Collection.qml  CollectionExport.qml  CollectionListOrdering.qml  CollectionOrdering.qml  CollectionStatistics.qml  CollectionTrack.qml  CollectionWay.qml  CollectionWaypoint.qml  Collections.qml  Cover.qml  DatabaseWarning.qml  Downloads.qml  Layers.qml  MainPage.qml  Map.qml  MapDetail.qml  MapList.qml  MapObjects.qml  MapPage.qml  NavigationInstructions.qml  NewWaypoint.qml  OpeningHours.qml  PlaceDetail.qml  PlacePicker.qml  RouteDescription.qml  Routing.qml  Search.qml  Settings.qml  TrackColor.qml  TrackEdit.qml  TrackFilter.qml  Tracker.qml  VoiceSelector.qml  WaypointSelector.qml
resources/: online-tile-providers.json
resources/world/: areanode.idx  water.idx
rpm/: harbour-osmscout.changes.in  harbour-osmscout.spec  harbour-osmscout.yaml  osmscout-sailfish.spec  osmscout-sailfish.yaml
scripts/: build-qtcharts.sh  build-with-mersdk.sh  build.sh  deploy.sh  download-dependencies.sh  transifexPull.sh  transifexPush.sh  update-rpm-spec.sh  updateTranslations.sh  uploadQml.sh
src/: AppSettings.cpp  AppSettings.h  Arguments.h  CollectionListModel.cpp  CollectionListModel.h  CollectionMapBridge.cpp  CollectionMapBridge.h  CollectionModel.cpp  CollectionModel.h  CollectionStatisticsModel.cpp  CollectionStatisticsModel.h  CollectionTrackModel.cpp  CollectionTrackModel.h  DBThread.cpp  DBThread.h  IconProvider.h  InputHandler.cpp  InputHandler.h  LocFile.cpp  LocFile.h  LocationInfoModel.cpp  LocationInfoModel.h  MapStyleHelper.cpp  MapStyleHelper.h  MapWidget.cpp  MapWidget.h  MediaPlayer.cpp  MediaPlayer.h  MemoryManager.cpp  MemoryManager.h  Migration.cpp  Migration.h  NearWaypointModel.cpp  NearWaypointModel.h  OSMScout.cpp  OSMTile.cpp  OSMTile.h  OnlineTileProvider.cpp  OnlineTileProvider.h  OnlineTileProviderModel.cpp  (+25 more)
stylesheets/: boundaries.oss  cycle.oss  map.ost  motorways.oss  outdoor.oss  public-transport.oss  railways.oss  standard.oss  winter-sports.oss
stylesheets/include/: basemap.oss  land_sea.oss  man_made.oss  route.oss  symbols.oss  track.oss  waypoint.oss
translations/: cs.ts  de.ts  de_DE.ts  en.ts  es.ts  et.ts  fa.ts  fi_FI.ts  fr.ts  hu.ts  it.ts  nb.ts  nl.ts  nl_BE.ts  osmscout-sailfish-es.ts  pl.ts  pt_BR.ts  ru.ts  sv.ts  zh_CN.ts
